Removed a z-index from the button for nav clipping issues.

--- a/src/views/landing/Spotlight/spotlight.scss
+++ b/src/views/landing/Spotlight/spotlight.scss
@@ -162,7 +162,6 @@
     color: #6C63FF;
     text-align: center;
     cursor: pointer;
-    z-index: 2;
     
     &:hover {
       background: #eeedff;
